objects/LLC_BI__Scorecard__c.object
<CustomObject>
    <description>The scorecard object stores information regarding decisions/recommendations that were generated for a product application.</description>
    <fields>
        <fullName>LLC_BI__Assigned_Points__c</fullName>
        <description>The number of points assigned to the product application. This field is optional to include on the scorecard and is automatically populated based on the visual flow logic configuration.</description>
        <label>Assigned Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>The description associated with the result that was assigned to the score card. This field is optional to include on the scorecard and is automatically populated based on the visual flow logic configuration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Result Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Rule_Name__c</fullName>
        <description>The name of the process that performed the decision. This field will not be visible on the scorecard, it is used to behind the scenes to specify which logic rule was run to generate the scorecard. The external name is set in the rules engine during the configuration of the feature.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Rule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Flow_URL__c</fullName>
        <description>The URL link to take you to the flow which was run to generate the scorecard. This field is linked to the version number. And the field name will not be visible on the scorecard, but the URL will be linked to the version number value displayed on the scorecard.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Flow_Version_Number__c</fullName>
        <description>This field is automatically populated when a scorecard is generated. This field will display the version number of the flow used to generate the scorecard. The Flow_URL is linked to this number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow Version Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Internal_Rule_Name__c</fullName>
        <description>The internal name of the process that initiated the score card. This field is not displayed on the scorecard, but is used behind the scenes to generate the scorecard. This is set in the Salesforce Visual Flow tool when saving the logic.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Rule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically populated, and linked the scorecard to the loan it was run from. This field is used to look up the loan record. This field will not populate on the scorecard but will link the scorecard to the loan it is decisioning.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Scorecards</relationshipLabel>
        <relationshipName>Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Points__c</fullName>
        <description>This field specifies what the maximum amount of points a scorecard can receive. This field is set through the visual flow logic and is automatically populated on the scorecard.</description>
        <label>Maximum Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Result_Description__c</fullName>
        <description>--DEPRECATED--DEPRECATED-This field is not in use</description>
        <encryptionScheme>None</encryptionScheme>
        <label>D - Result Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Result__c</fullName>
        <description>The overall result of the decision. This field is automatically displayed and conditionally rendered based on the configuration set in the Visual Flow Logic. This result will also populate to the loan wall, for additional workflow and configuration options. The results are configurable and controlled through the Visual Flow Logic.</description>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recommend Approval</fullName>
                </value>
                <value>
                    <fullName>Recommend Decline</fullName>
                </value>
                <value>
                    <fullName>Manual Review Required</fullName>
                </value>
                <value>
                    <fullName>Information Required</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Snapshot__c</fullName>
        <description>The snapshot of the information at the point the scorecard was created. The snapshot is a field behind the scenes that stores the point in time details of the loan and the relationship for the fields being used on the scorecard, when the scorecard was generated. These details are then displayed in the appropriate sections of the score card data, to show point in time data capture, and the score that was assigned it that value.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Snapshot</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Scorecard</label>
    <nameField>
        <displayFormat>SC{00000}</displayFormat>
        <label>Score Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>